--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,8 @@ log/DSP.leaks
 .vs
 /win32/.vs/darkstar/v15
 
+# Configuration files
+/conf/login_darkstar.conf
+/conf/search_server.conf
+/conf/map_darkstar.conf
+
