--- a/conf/server_message.conf
+++ b/conf/server_message.conf
@@ -1,3 +1,10 @@
-Please visit http://forums.dspt.info/ for the latest information on the project. 
-Also, do not hesitate to join us on Discord https://discord.gg/4dgAzfC 
-Thank you.
+Welcome to DarkAerith!! This is a FFXI server modified. We have added a few
+things and left some things alone. Currently this is under construction, and
+some things don't work or are WIP. Any issues should be brought to the attention
+of a GM. Juanlove, WillardP, Gunryuku, and Kiametsu. We will do our best to 
+maintain an enjoyable atmosphere, so please do unto others as you would yourself.
+This project started as the DarkStar Project, a Final Fantasy XI Server project.
+So credit goes to those guys for starting this. If there are any huge issues
+please visit http://forums.dspt.info/ for the latest information on the project. 
+Also, they have a discord that might help: Discord https://discord.gg/4dgAzfC 
+Thank you, and enjoy your time in our world.
